# SD-Model-Manager

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  PHASE2_COMMIT_READY.md  README.md  pyproject.toml
.claude/agents/: bug-reproduction.md  codex-review-agent.md  development-context.md  general-purpose.md  plan.md  reference-explorer.md  release-prep.md  test-quality-checker.md
.claude/scripts/: restore-context.sh
.kiro/specs/model-viewer/: design.md  requirements.md  spec.json  tasks.md
.kiro/steering/: product.md  structure.md  tech.md
docs/: FRONTEND_SETUP.md  LOGGING_STRATEGY.md  PHASE2_COMMIT_READY.md  PHASE2_SUMMARY.md  SECURITY_FIX_PATH_TRAVERSAL.md  TESTING_GUIDE.md  UI_dev.md  log_dev.md  mvp_specification.md  requirements.md  review.md  tdd_plan.md  tdd_plan_review.md
docs/progress-reports/: task-1.1-afterReview.md  task-1.1-complete.md  task-1.2-complete.md  task-1.3-complete.md
src/sd_model_manager/: __init__.py  __main__.py  config.py
src/sd_model_manager/download/: __init__.py  civitai_client.py  download_service.py
src/sd_model_manager/lib/: errors.py  logging_config.py
src/sd_model_manager/registry/: __init__.py  models.py  scanner.py
src/sd_model_manager/ui/: __init__.py
src/sd_model_manager/ui/api/: download.py  health.py  main.py  progress.py  (+1 more)
tests/sd_model_manager/: test_config.py  test_sample.py
tests/sd_model_manager/download/: test_civitai_client.py  test_download_service.py
tests/sd_model_manager/lib/: test_errors.py  test_logging_config.py
tests/sd_model_manager/registry/: test_lora_model.py  test_scanner.py
(+16 files in other folders)
